kube-cluster/yamls/pos-backend/pos-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pos-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pos-backend
  template:
    metadata:
      labels:
        app: pos-backend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: pos-backend
        image: javascriptjenkins/pos-backend:dev3
        ports:
        - containerPort: 3306
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - name: applogs-persistent-storage
          mountPath: /logs
      volumes:
      - name: applogs-persistent-storage
        persistentVolumeClaim:
          claimName: applogs-pv-claim
      imagePullSecrets:
      - name: regcred
