kube-cluster/yamls/pos-backend/pos-backend-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: pos-backend-np
spec:
  type: NodePort
  ports:
  - port: 8080
    name: tcp-8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pos-backend
