kube-cluster/yamls/pos-backend/pos-backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mypos-backendingress
spec:
  rules:
  - host: www.sportvvs.com
    http:
      paths:
      - backend:
          serviceName: pos-backend
          servicePort: 80
        path: /

#Here is where things seem to get confusing, though. Ingress on it’s own does not really do anything. You need something to listen to the Kubernetes API for Ingress resources and then handle requests that match them. This is where the second piece to the puzzle comes in — the Ingress Controller.
